# tacos

./: .clang-format  .gitignore  CMakeLists.txt  tacos.sh
.github/: CODEOWNERS
include/tacos/: Mesh2D_hetero.h  TacosGreedy.h  Topology.h
src/: AllGather.cpp  CMakeLists.txt  Hypercube3D.cpp  Mesh2D.cpp  Mesh2D_hetero.cpp  TacosGreedy.cpp  TacosNetwork.cpp  Torus2D.cpp  Torus3D.cpp  main.cpp
tests/: CMakeLists.txt  test_tacos.cpp  test_tacos_hypercube_3d.cpp  test_tacos_mesh_2d.cpp  test_tacos_mesh_2d_hetero.cpp  test_tacos_torus_3d.cpp  test_utils.h
utils/: run_clang_format.sh
